style.css
html,
body {
    margin: 0;
    padding: 0;
    border: 0;
}

body {
    background: var(--body-bg-color);
}

.light-mode {
    background: var(--body-light-color);
    
  }

/* #region || COLOURS */

:root{
    --main-light-color: white;
    --main-otherlight-color: wheat;
    --body-bg-color: #202231;
    --main-bg-color: #67615F;
  }

/* #region || GENERAL STYLES */

.main {
    /* animation: 0.6s ease-out 0s 1 loadDown; */
    background: var(--main-bg-color);
    width: 50%;
    position: static;
    float: centre;
    top: 0;  
    margin: auto;
    padding: 20px;
    height: auto;
}

/* #endregion  */ 

/* #region || TITLES */

.title {
    font-family: 'Lucida Console', sans-serif;
    color: white;
    background-color: #081f3c;
    font-size: 250%;
    font-weight: 100;
    line-height: 20px;
    letter-spacing: 1px;
    padding: 1px 1px 1px;
    width: 75%;
    margin: auto;
    text-align: center;
    border-bottom: double #555;
    border: 2px solid white;
    border-radius: 16px;
    /* -webkit-text-fill-color: rgb(255, 255, 255);
    -webkit-text-stroke: 1px; */
}

.smallbox {
    font-family: 'Lucida Console', sans-serif;
    color: white;
    background-color: #67615F;
    width: 75%;
    margin: auto;
    text-align: center;
    font-size: 150%;
    font-weight: 100;
    line-height: 16px;
    letter-spacing: 1px;
    padding: 10px 10px 20px;
    border-bottom: double #555;
    border: 2px solid white;
    border-radius: 8px;
}

.smallbox.l {
    font-family: 'Helvetica Neue', sans-serif;
    color: white;
    background-color: #67615F;
    width: 75%;
    margin: auto;
    text-align: left;
    font-size: 150%;
    font-weight: 100;
    line-height: 16px;
    letter-spacing: 1px;
    padding: 0 0 1px;
    border-bottom: double #555;
    border: 2px solid white;
}

.skills {
    
    display: flex;
    flex-wrap: wrap;
    list-style-type: none;
    justify-content: start;
    gap: 5px;
}

li{
    background-color: #04041ebf;
    border: none;
    color: white;
    padding: 10px 20px;
    text-decoration: none;
    font-size: 15px;
    transition: 200ms;
    margin-right: 15px;
    border-radius: 8px;
}

.buttoncontainer {
    display: flex;
    justify-content: center;
    gap: 15px;
}

.description {
    font-size: 16px;
}

/* #endregion */

/* #region || HEADINGS */

h2 {
    font-family: "Lucida Console", "Courier New", monospace;
    color: white;
    font-size: 90%;
}

/* #endregion */

/* #region || TOP NAV */

.topnav-alignment {
    width: 50%;
    background-color: #86878F;
    position: relative;
    float: centre;
    padding-left: 20px;
    padding-right: 20px;
    top: 0;
    margin: auto;
}

.topnav {
    overflow: auto;
    background-color: #86878F;
}

.topnav a {
    width: 20%;
    float: left;
    position: relative;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 22px;
    opacity: 0.6;
    transition: 0.5s;
}

.topnav a.active {
    color: white;
    border-bottom: 3px solid #081f3c
}

.topnav a:hover {
    background-color: lightgrey;
    color: black;
    opacity: 1;
}

.footer
{
    position: fixed;
    width: 100%;
    
    padding: 5px 0px 5px 10px;

    background-color: rgba(0,0,0,0.85);
    opacity: 50%;

    color: white;
    
    bottom: 0;

    font-size: 12px;
}


/* #endregion */

/* #region || IMAGES */

img {
    max-width: 95%;
    height: auto;
    transition: 200ms;
}

img:hover {
    transform: scale(1.05);
    opacity: 0.9;
    border: #333;
}

/* #endregion */

/* #region || UI */

hr {
    color: white;
    width: 82.5%;
}

br {
    display: block;
    margin: 10px 0;
}

.box {
    text-align: center;
    width: 100px;
    height: 100px;
    margin: 5px;
    border: 1px solid rgba(0, 0, 0, .2);
}

/* #endregion */

/* #region || BUTTON */

button {
    background-color: #04041ebf;
    border: none;
    color: white;
    /* padding: 30px 75px; */
    padding: 30px 75px;
    text-decoration: none;
    display: inline-block;
    font-size: 30px;
    transition: 200ms;
    border-radius: 8px;
}

/* a {
    font-size: 0;
  } */

button:hover {
    background-color: #080837b4;
    color: white;
    transform: scale(1.1);
}

.backbutton {
    background-color: #04041ebf;
    border: none;
    color: white;
    padding: 20px 50px;
    text-decoration: none;
    display: inline-block;
    font-size: 30px;
    transition: 200ms;
    margin-right: 15px;
    border-radius: 8px;
}

.downloadbutton {
    background-color: #04041ebf;
    border: none;
    color: white;
    padding: 20px 50px;
    text-decoration: none;
    font-size: 30px;
    transition: 200ms;
    border-radius: 8px;
}

tab {
    overflow: visible;
    border: 1px solid cadetblue;
    background-color: black;
}

.player-container {
    aspect-ratio: 16 / 9;
    width: 100%;
    height: auto;
}

.itch-container {
    width: auto;
    height: auto;
}

iframe {
    width: 100%;
    /* height: auto;
    object-fit: contain; */
  }

/* #endregion */

/* #region || MOBILE SETTINGS */

@media screen and (max-width: 800px) {
    topnav {
        width: 50%;
        height: auto;
        position: relative;
    }

    .topnav-alignment {
        width: 100%;
    }

    .topnav a {
        width: 20%;
        padding: 12px 8px;
    }

    .main {
        width: 92.5%;
        position: relative;
        float: centre;
        top: 0;
        margin: auto;
        padding: 10px;
        height: auto;
    }

    .title {
        font-family: 'Helvetica Neue', sans-serif;
        color: white;
        font-size: 250%;
        font-weight: 100;
        line-height: 20px;
        letter-spacing: 1px;
        padding: 0 0 1px;
        border-bottom: double #555;
    }

    .smallbox {
        font-family: 'Helvetica Neue', sans-serif;
        color: white;
        width: 90%;
        margin: auto;
        text-align: center;
        font-size: 100%;
        font-weight: 100;
        line-height: 16px;
        letter-spacing: 1px;
        padding: 0 0 1px;
        border-bottom: double #555;
    }

    .smallbox.l {
        font-family: 'Helvetica Neue', sans-serif;
        color: white;
        width: 90%;
        margin: auto;
        text-align: center;
        font-size: 2em;
        font-weight: 100;
        line-height: 16px;
        letter-spacing: 1px;
        padding: 0 0 1px;
        border-bottom: double #555;
    }

    button {
        border: none;
        color: white;
        padding: 20px 0px;
        text-decoration: none;
        display: inline-block;
        font-size: 20px;
        transition: 200ms;
        margin-right: 15px;
        border-radius: 8px;
    }

    .backbutton {
        border: none;
        color: white;
        padding: 10px 30px;
        text-decoration: none;
        display: inline-block;
        font-size: 20px;
        transition: 200ms;
        margin-right: 15px;
        border-radius: 8px;
    }

    h1 {
        font-size: 90%;
    }

    h2 {
        font-size: 80%;
    }

    hr {
        color: white;
        width: 90%;
    }

}

@keyframes loadDown {
    0% {
        transform: translateX(-100%);
    }
    100% {
        transform: translateX(0);
    }
}

@media only screen and (max-width: 651px) {
    #title {
        font-size: 5vw;
    }

    #smallbox {
        width: relative;
    }
}

/* #endregion */

